# trash_classifier_cnn

./: .gitignore  README.md
backend/: .env  .env.example  app.py  db.py  models.py  pyproject.toml
frontend/: package.json
frontend/src/: main.tsx
model_server/: README.md  model.py  pyproject.toml  run_dev_server.bat
